# gitx

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs  undo.rs
src/core/: mod.rs  undo.rs
src/forwarding/: mod.rs
src/models/: mod.rs  undo.rs
src/tui/: mod.rs
src/utils/: graph_renderer.rs  mod.rs  styles.rs  tui_graph.rs
tests/: core_tests.rs  timeline_tests.rs
