[package]
name = "gitx"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "Modern Git Tree Explorer and Workflow Tool"

[dependencies]
# Very stable versions to ensure compatibility with Rust 1.75.0
clap = { version = "=4.4.18", features = ["derive"] }
git2 = "=0.15.0"
ratatui = "=0.24.0"
crossterm = "=0.25.0"
anyhow = "=1.0.79"
thiserror = "=1.0.56"
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.111"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt"] }
itertools = "=0.10.5"
textwrap = "=0.16.0"

[dev-dependencies]
tempfile = "=3.9.0"
